--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.4.0
+  get: ^4.6.6
+  date_format: ^2.0.9
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
